# ekiree-dashboard

./: .gitignore  flake.nix  pyproject.toml
.github/workflows/: django.yml  django_test.yml  django_testing.yml
ekiree_dashboard/: imported_pip_requirements.txt
ekiree_dashboard/ed/: models.py  urls.py
ekiree_dashboard/ed/migrations/: 0001_initial.py
ekiree_dashboard/ed/tests/: test_views_courselist.py  test_views_ed.py
ekiree_dashboard/ed/views/: views_approved.py  views_courselist.py  views_ed.py  views_goals.py  views_majmin.py
ekiree_dashboard/poetfolio/: settings.py  urls.py  views.py
ekiree_dashboard/poetfolio/tests/: test_views.py
ekiree_dashboard/reports/views/: views_reports.py
ekiree_dashboard/siteconfig/: models.py  views.py
ekiree_dashboard/siteconfig/migrations/: 0001_initial.py  0001_initial_squashed_0004_heroimage.py  0003_delete_heroimage.py  0004_heroimage.py
ekiree_dashboard/vita/: forms.py  models.py  views.py
ekiree_dashboard/vita/migrations/: 0003_student_narrative.py  0006_auto_20190808_1519.py  0007_auto_20190808_1606.py  0012_application_feedback.py  0016_home_page.py  0033_auto_20200730_0120.py
secrets/: example-secrets.json
wsp_dashboard/: imported_pip_requirements.txt
