[tool.poetry]
name = "ekiree_dashboard"
version = "0.1.0"
description = "Course tracking software for the Whittier Scholars Program"
authors = ["Ekiree <noah@ekiree.tech>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
babel = "^2.14.0"
django = "^4.2.11"
django-bootstrap4 = "23.1"
django-crispy-forms = "2.1"
django-ckeditor-5 = "^0.2.15"
django-js-asset = "^2.2.0"
django-localflavor = "4.0"
django-phonenumber-field = "7.2.0"
django-storages = "1.14.4"
phonenumbers = "^8.13.40"
pillow = "11.0.0"
python-stdnum = "1.19"
pytz = "2023.3"
reportlab = "4.0.4"
wheel = "^0.44.0"
gunicorn = "^22.0.0"
whitenoise = "6.6.0"
Brotli = "1.1.0"
boto3 = "1.34.157"
urllib3 = "2.2.2"
poetry-core = "^1.9.1"
setuptools = "^75.1.0"
authlib = "^1.3.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
mysqlclient = "^2.2.6"

[tool.pyright]
include = ["./"]

pythonVersion = "^3.11"
pythonPlatform = "Linux"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "poetfolio.settings"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"
